--- a/6.16.html
+++ b/6.16.html
@@ -47,13 +47,12 @@
             color: #666;
         }
         .con1{
-            display: flex;
-            justify-content: center;
-            flex-direction: row;
+            width: 30px;
         }
         .con{
                 display: flex;
                 justify-content: flex-end;
+                
                 
             }
         @media(max-width:600px){
@@ -111,11 +110,11 @@
         </div>
          <!-- 导航栏 -->
           <div class="daoHang flex1 baiSe ">
-            <div class="daoHang">影视娱乐</div>
-            <div class="daoHang">装机必备</div>
-            <div class="daoHang">日常工具</div>
-            <div class="daoHang">导航</div>
-            <div class="daoHang">导航</div>
+            <div class="daoHang"><a href="">影视娱乐</a></div>
+            <div class="daoHang"><a href="">装机必备</a></div>
+            <div class="daoHang"><a href="">日常工具</a></div>
+            <div class="daoHang"><a href="">导航</a></div>
+            <div class="daoHang"><a href="">导航</a></div>
 
           </div>
     </div>
@@ -127,8 +126,8 @@
             <table class="con">
                 <tr>
                     <td>
-                        <a href="zyh.html">意见反馈</a>
-                        <a href="">登录/注册</a>
+                    <td width="120px"><a href="zyh.html">意见反馈</a></td>
+                    <td width="120px"><a href="denglu.html">登录/注册</a></td>
                     </td>
                 </tr>
             </table>
@@ -148,7 +147,7 @@
             <!-- 列表区 -->
                 <div class="flex column">
                     <!-- 列表项 -->
-                    <div style="height: 160px" class="baiSe mgt8 yinYing"></div>
+                    <div style="height: 60px" class="baiSe mgt8 yinYing"></div>
                     <div style="height: 160px" class="baiSe mgt8 yinYing"></div>
                     <div style="height: 160px" class="baiSe mgt8 yinYing"></div>
                     <div style="height: 160px" class="baiSe mgt8 yinYing"></div>
@@ -159,9 +158,9 @@
          <!-- 右区 -->
             <div style="flex: 1" class="youQu flex column mgr8 mgt8">
             <!-- 提示区 -->
-                <div style="height: 150px" class="baiSe yinYing"></div>
+                <div style="height: 600px" class="baiSe yinYing"></div>
           <!-- 消息区 -->
-                <div style="height: 300px" class="baiSe mgt8 yinYing"></div>
+                <div style="height: 1000px" class="baiSe mgt8 yinYing"></div>
             </div>
         </div>
     </div> 
