--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
       body {
         margin: 0;
       }
+       @media(max-width:600px){
+            .ceBian{
+                display: none;
+            }
+            .neiRong{
+                flex-direction: column;
+            }
+            .shuJuQu{
+                flex-direction: column;
+            }
+            .youQu{
+                margin-left: 8px;
+            }
+            .shuJu{
+                margin:0 0 8px;
+                flex: auto;
+            }
+            
+        }
     </style>
   </head>
   <body>
