--- a/6.16.html
+++ b/6.16.html
@@ -126,7 +126,7 @@
             <table class="con">
                 <tr>
                     <td>
-                    <td width="120px"><a href="zyh.html">意见反馈</a></td>
+                    <td width="120px"><a href="index.html">意见反馈</a></td>
                     <td width="120px"><a href="denglu.html">登录/注册</a></td>
                     </td>
                 </tr>
