--- a/denglu.html
+++ b/denglu.html
@@ -31,7 +31,7 @@
     .box{
         width: 100%;
         height: 100vh;
-        background-image: url(./image/02.JPEG);
+        background-image: url(./image/02.png);
         background-repeat: no-repeat;
         background-size: 100% 100%;
     }
