--- a/6.16.html
+++ b/6.16.html
@@ -6,7 +6,7 @@
     <title>郑育航666</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
      <link rel="stylesheet" href="/css/bootstrap.min.css">
-     <link rel="stylesheet" href="/style.css">
+     <link rel="stylesheet" href="style.css">
      
     <style>
         .vertical-text {
