--- a/6.16.html
+++ b/6.16.html
@@ -249,9 +249,9 @@
                     </div>
                     <div style="height: 400px" class="baiSe mgt8 yinYing sousuokuang">
                         <div class="box">
-                            <div class="box-img"><img src="/image/轮播1.jpeg" width="1000" height="460"></div>
-                            <div class="box-img"><img src="/image/轮播2.jpeg" width="1000" height="460"></div>
-                            <div class="box-img"><img src="/image/轮播3.jpg" width="1000" height="460"></div>
+                            <div class="box-img"><img src="./image/轮播1.jpeg" width="1000" height="460"></div>
+                            <div class="box-img"><img src="./image/轮播2.jpeg" width="1000" height="460"></div>
+                            <div class="box-img"><img src="./image/轮播3.jpg" width="1000" height="460"></div>
                             <div class="box-left">&lt;</div>
                             <div class="box-right">&gt;</div>
                             <div class="box-zhiding">
