--- a/6.16.html
+++ b/6.16.html
@@ -287,8 +287,7 @@
     <script type="text/javascript" src="/js/jquery-3.7.1.js" ></script>
     <script src="/js/bootstrap.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-        $(function(){
+    <script type="text/javascript">$(function(){
             var index=0;//标记当前图片索引
             var f;
             dingshiqi();
