--- a/6.16.html
+++ b/6.16.html
@@ -293,7 +293,8 @@
             dingshiqi();
             function dingshiqi(){
                 f=setInterval(function(){
-                if(index==$(".box-img").length-1){
+                if(index==3{
+                    //$(".box-img").length-1)
                     index=0;
                     $(".box-img").css("opacity","0");
                     $(".box-img").eq(index).css("opacity","1");
