--- a/6.16.html
+++ b/6.16.html
@@ -285,8 +285,7 @@
     </div>
 
     
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+
     <script type="text/javascript">
         $(function(){
             var index=0;//标记当前图片索引
@@ -373,6 +372,8 @@
             })
         })
     </script>
-    <script type="text/javascript" src="jquery-3.7.1.js" ></script>
+    <script type="text/javascript" src="/js/jquery-3.7.1.js" ></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
