--- a/6.16.html
+++ b/6.16.html
@@ -372,7 +372,7 @@
             })
         })
     </script>
-    <script type="text/javascript" src="/js/jquery-3.7.1.js" ></script>
+    <script type="text/javascript" src="jquery-3.7.1.js" ></script>
     <script src="/js/bootstrap.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 </body>
