--- a/6.16.html
+++ b/6.16.html
@@ -373,7 +373,7 @@
         })
     </script>
     <script type="text/javascript" src="jquery-3.7.1.js" ></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="bootstrap.js"></script>
+    <script src="bootstrap.min.js"></script>
 </body>
 </html>
